request prismic success + pagination

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,25 @@
-// TODO
+.article {
+  max-width: 721px;
+  margin: 0 auto;
+  margin-top: 32px;
+
+  h1 {
+    font-size: 48px;
+    padding: 4px;
+  }
+
+  .info {
+    display: flex;
+    gap: 20px;
+    margin-top: 1.2rem;
+    margin-bottom: 4rem;
+
+    time,
+    span {
+      gap: 10px;
+      display: flex;
+      align-items: center;
+      color: var(--info);
+    }
+  }
+}
