--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,17 @@
-// TODO
+.content {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.btnLoadPost {
+  background: none;
+  border: none;
+  color: var(--highlight);
+  font-weight: bold;
+
+  transition: opacity 0.2s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
