--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,32 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --heading: #f8f8f8;
+  --body: #d7d7d7;
+  --info: #bbbbbb;
+  --highlight: #ff57b2;
+  --background: #1a1d23;
+}
+
+body {
+  background: var(--background);
+  color: var(--heading);
+}
+
+body,
+input,
+textarea,
+select,
+button {
+  font: 400 1rem "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
